o restored 1.4 compatibility
git-svn-id: https://svn.apache.org/repos/asf/maven/doxia/doxia/trunk@811611 13f79535-47bb-0310-9956-ffa450edef68